idea/testData/checker/regression/ClassDeclarationAsExpression2.kt
// FIR_COMPARISON

fun g() = 1 < <error descr="[SYNTAX_ERROR] Syntax error"><error descr="[SYNTAX_ERROR] Syntax error">class A</error></error>